<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_shape"
        app:layout_constraintEnd_toStartOf="@+id/qr_code_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search_view" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/search_icon"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintTop_toTopOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="@+id/search_view"

        android:layout_marginStart="@dimen/margin_search_view"
        android:contentDescription="@string/magnifier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/search_icon"
        app:layout_constraintTop_toTopOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="@id/search_view"

        style = "@style/Text"
        android:textColor="#80010035"
        android:text="@string/search_string"
        android:textSize="@dimen/search_text_dimen"

        android:layout_marginStart="@dimen/margin_search_view"

        />

    <ImageView
        android:id="@+id/qr_code_view"
        android:layout_width="wrap_content"

        android:src="@drawable/qr_code_shape"

        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/search_view"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/find_qr_code" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/qr_code_icon"

        app:layout_constraintTop_toTopOf="@+id/qr_code_view"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code_view"
        app:layout_constraintStart_toStartOf="@+id/qr_code_view"
        app:layout_constraintEnd_toEndOf="@+id/qr_code_view"
        android:contentDescription="@string/qr_code" />

</androidx.constraintlayout.widget.ConstraintLayout>