<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/best_seller_item_size"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/best_seller_picture"
        android:layout_width="0dp"
        android:layout_height="@dimen/best_seller_item_size"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/best_seller" />

    <ImageView
        android:id="@+id/favorite_icon_oval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/favorite_icon_margin"
        android:src="@drawable/best_seller_favorite_icon"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/favorite_icon_placeholder" />

    <ImageView
        android:id="@+id/favorite_icon_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/favorite_border_icon"

        app:layout_constraintBottom_toBottomOf="@id/favorite_icon_oval"
        app:layout_constraintEnd_toEndOf="@id/favorite_icon_oval"
        app:layout_constraintStart_toStartOf="@id/favorite_icon_oval"
        app:layout_constraintTop_toTopOf="@id/favorite_icon_oval"
        android:contentDescription="@string/favorite_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/best_seller_picture"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/price_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DeepBlue"
            android:textSize="@dimen/price_with_sale"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/price_without"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/Text"
            android:textSize="@dimen/price_without_sale"
            android:textColor="#CCCCCC"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"

        android:textSize="@dimen/best_seller_title_text"
        style="@style/DeepBlue"
        />


</androidx.constraintlayout.widget.ConstraintLayout>